<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/calendar"
            android:title="@string/timetable" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/event"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_subject"
            android:icon="@drawable/subject"
            android:title="@string/subject" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>
</menu>

